[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schd"
version = "1.0.0"
description = "Scheduler custom handlers, blueprints, and utilities"
authors = [
    {name = "Renglo Team"}
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",  # For API calls
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["schd", "schd.handlers"]

[tool.setuptools.package-data]
schd = ["blueprints/*.json"]

